--- a/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
+++ b/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>This library includes PInvoke methods, structures and constants.</Description>
+    <Description>	Methods, structures and constants imported from Kernel32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
-    <TargetFrameworks>net20;net35;net40;net461</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net461;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Kernel32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <RootNamespace>Vanara.PInvoke</RootNamespace>
