--- a/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
+++ b/PInvoke/ShlwApi/Vanara.PInvoke.ShlwApi.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>This library includes PInvoke methods, structures and constants.</Description>
+    <Description>Methods, structures and constants imported from ShlwApi.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
-    <TargetFrameworks>net20;net35;net40;net461</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net461;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.ShlwApi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <RootNamespace>Vanara.PInvoke</RootNamespace>
