--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -4,16 +4,15 @@
     <Description>This library includes shared methods, structures and constants for use throughout the Vanara assemblies. Think of it as windows.h with some useful extensions.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>Vanara.Core</AssemblyTitle>
-    <VersionPrefix>1.0.1</VersionPrefix>
+    <VersionPrefix>1.0.2</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net461;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.Core</AssemblyName>
     <PackageId>Vanara.Core</PackageId>
     <RootNamespace>Vanara</RootNamespace>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>David Hall</Authors>
     <PackageProjectUrl>https://github.com/dahall/vanara</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/dahall/vanara/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://github.com/dahall/Vanara/blob/master/docs/Vanara64x64.png</PackageIconUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/dahall/Vanara/master/docs/Vanara64x64.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/dahall/vanara</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>vanara net-extensions interop</PackageTags>
@@ -23,7 +22,11 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
