--- a/PInvoke/Mpr/Vanara.PInvoke.Mpr.csproj
+++ b/PInvoke/Mpr/Vanara.PInvoke.Mpr.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Methods, structures and constants imported from Shell32.dll.</Description>
+    <Description>Methods, structures and constants imported from Mpr.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <VersionPrefix>1.0.3</VersionPrefix>
-    <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
-    <AssemblyName>Vanara.PInvoke.Shell32</AssemblyName>
+    <TargetFrameworks>net20;net35;net40;net45;netstandard2.0</TargetFrameworks>
+    <AssemblyName>Vanara.PInvoke.Mpr</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <RootNamespace>Vanara.PInvoke</RootNamespace>
     <Authors>David Hall</Authors>
@@ -49,10 +49,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
-    <ProjectReference Include="..\ComCtl32\Vanara.PInvoke.ComCtl32.csproj" />
-    <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
-    <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
-    <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 
