Updated projects to 1.0.4, added release notes, and updated correlation reports.

--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Methods, structures and constants imported from ComCtl32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.3</VersionPrefix>
+    <VersionPrefix>1.0.4</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.ComCtl32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,31 +22,37 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PackageReleaseNotes>Currently implements:
 
+Functions
+ImageList_DrawEx, ImageList_GetIcon, ImageList_SetOverlayImage, InitCommonControlsEx, PropertySheetA, PropertySheetW, SendMessageA, SendMessageW, TaskDialog, TaskDialogIndirect
+
+Structures
+BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, EDITBALLOONTIP, HDHITTESTINFO, HDITEM, HDLAYOUT, HDTEXTFILTER, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, LVTILEVIEWINFO, PBRANGE, PROPSHEETHEADER, TCHITTESTINFO, TCITEM, TCITEMHEADER, NMTTDISPINFO, TTHITTESTINFO, TTGETTITLE, TOOLINFO, NMTRBTHUMBPOSCHANGING, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVKEYDOWN, TVGETITEMPARTRECTINFO, TVHITTESTINFO, TVINSERTSTRUCT, NMTVITEMCHANGE, TVITEM, TVITEMEX, TVSORTCB
+
+Interfaces
+IImageList
+
+</PackageReleaseNotes>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net20' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Gdi32\Vanara.PInvoke.Gdi32.csproj" />
@@ -54,5 +60,4 @@
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
-
 </Project>
