--- a/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
+++ b/PInvoke/Kernel32/Vanara.PInvoke.Kernel32.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>	Methods, structures and constants imported from Kernel32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.3</VersionPrefix>
+    <VersionPrefix>1.0.4</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Kernel32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,34 +22,36 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PackageReleaseNotes>Currently implements:
 
+Functions
+ActivateActCtx, ApplicationRecoveryFinished, ApplicationRecoveryInProgress, CloseHandle, CreateActCtxA, CreateActCtxW, CreateFileA, CreateFileW, CreateHardLinkA, CreateHardLinkW, CreateSymbolicLinkA, CreateSymbolicLinkW, DeactivateActCtx, DeviceIoControl, EnumResourceNamesA, EnumResourceNamesW, FileTimeToSystemTime, FindResourceA, FindResourceW, FormatMessageA, FormatMessageW, FreeLibrary, GetApplicationRecoveryCallback, GetApplicationRestartSettings, GetCompressedFileSizeA, GetCompressedFileSizeW, GetCurrentActCtx, GetCurrentProcess, GetCurrentThread, GetCurrentThreadId, GetDiskFreeSpaceA, GetDiskFreeSpaceExA, GetDiskFreeSpaceExW, GetDiskFreeSpaceW, GetModuleFileNameA, GetModuleFileNameW, GetProcAddress, GetProcessHeap, GetVolumeInformationA, GetVolumeInformationW, GlobalLock, GlobalUnlock, HeapAlloc, HeapCreate, HeapDestroy, HeapFree, HeapSize, LoadLibraryA, LoadLibraryExA, LoadLibraryExW, LoadLibraryW, LoadResource, LocalAlloc, LocalFree, LocalReAlloc, LocalSize, LockResource, QueryDosDeviceA, QueryDosDeviceW, ReadFile, RegisterApplicationRecoveryCallback, RegisterApplicationRestart, ReleaseActCtx, SetFilePointerEx, SetLastError, SizeofResource, SystemTimeToFileTime, UnregisterApplicationRecoveryCallback, UnregisterApplicationRestart, WriteFile
+
+Structures
+ACTCTX
+
+</PackageReleaseNotes>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net20' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-
 </Project>
