--- a/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
+++ b/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Methods, structures and constants imported from Ole32.dll, OleAut32 and PropSys.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.3</VersionPrefix>
+    <VersionPrefix>1.0.4</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard20</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Ole</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,34 +22,39 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PackageReleaseNotes>Currently implements:
 
+Functions
+CoInitializeEx, CoUninitialize, InitPropVariantFromBooleanVector, InitPropVariantFromBuffer, InitPropVariantFromCLSID, InitPropVariantFromDoubleVector, InitPropVariantFromFileTime, InitPropVariantFromFileTimeVector, InitPropVariantFromInt16Vector, InitPropVariantFromInt32Vector, InitPropVariantFromInt64Vector, InitPropVariantFromPropVariantVectorElem, InitPropVariantFromStringVector, InitPropVariantFromUInt16Vector, InitPropVariantFromUInt32Vector, InitPropVariantFromUInt64Vector, InitPropVariantVectorFromPropVariant, OleInitialize, OleUninitialize, PropVariantChangeType, PropVariantClear, PropVariantCompareEx, PropVariantCopy, PropVariantGetElementCount, PropVariantToBoolean, PropVariantToBooleanVectorAlloc, PropVariantToBSTR, PropVariantToBuffer, PropVariantToDouble, PropVariantToDoubleVectorAlloc, PropVariantToFileTime, PropVariantToFileTimeVectorAlloc, PropVariantToGUID, PropVariantToInt16, PropVariantToInt16VectorAlloc, PropVariantToInt32, PropVariantToInt32VectorAlloc, PropVariantToInt64, PropVariantToInt64VectorAlloc, PropVariantToStringAlloc, PropVariantToStringVectorAlloc, PropVariantToStringWithDefault, PropVariantToUInt16, PropVariantToUInt16VectorAlloc, PropVariantToUInt32, PropVariantToUInt32VectorAlloc, PropVariantToUInt64, PropVariantToUInt64VectorAlloc, PropVariantToVariant, PSGetNameFromPropertyKey, ReleaseStgMedium, SafeArrayAccessData, SafeArrayCreate, SafeArrayCreateEx, SafeArrayCreateVector, SafeArrayDestroy, SafeArrayGetDim, SafeArrayGetElement, SafeArrayGetElemsize, SafeArrayGetLBound, SafeArrayGetUBound, SafeArrayPutElement, SafeArrayUnaccessData, StgCreateStorageEx, StgIsStorageFile, StgOpenStorage, StgOpenStorageEx, VariantClear, VariantToPropVariant
+
+Structures
+STGOPTIONS, SNB, BLOB, CLIPDATA, PACKEDMETA, PROPVARIANT, PROPERTYKEY, SAFEARRAY, SAFEARRAYBOUND
+
+Interfaces
+IEnumSTATSTG, IStorage, IPropertyDescriptionList, IPropertyDescription, IPropertyStore
+
+</PackageReleaseNotes>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net20' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
 </Project>
