--- a/PInvoke/Security/Vanara.PInvoke.Security.csproj
+++ b/PInvoke/Security/Vanara.PInvoke.Security.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Methods, structures and constants imported from AdvApi32.dll, Authz.dll and Secur32.dll.</Description>
     <Copyright>Copyright © 2017</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>1.0.3</VersionPrefix>
+    <VersionPrefix>1.0.4</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Security</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -22,39 +22,40 @@
     <Company>GitHub Community</Company>
     <Product>Vanara</Product>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PackageReleaseNotes>Currently implements:
 
+Functions
+AbortSystemShutdownA, AbortSystemShutdownW, AdjustTokenPrivileges, AllocateAndInitializeSid, AllocateLocallyUniqueId, AuthzAccessCheck, AuthzFreeAuditEvent, AuthzFreeContext, AuthzFreeHandle, AuthzFreeResourceManager, AuthzGetInformationFromContext, AuthzInitializeCompoundContext, AuthzInitializeContextFromSid, AuthzInitializeContextFromToken, AuthzInitializeObjectAccessAuditEvent, AuthzInitializeResourceManager, AuthzModifyClaims, AuthzModifySecurityAttributes, AuthzModifySids, ChangeServiceConfig2A, ChangeServiceConfig2W, ChangeServiceConfigA, ChangeServiceConfigW, ConvertSecurityDescriptorToStringSecurityDescriptorA, ConvertSecurityDescriptorToStringSecurityDescriptorW, ConvertSidToStringSidA, ConvertSidToStringSidW, ConvertStringSecurityDescriptorToSecurityDescriptorA, ConvertStringSecurityDescriptorToSecurityDescriptorW, ConvertStringSidToSidA, ConvertStringSidToSidW, CopySid, CredFree, CredGetTargetInfoA, CredGetTargetInfoW, CredReadDomainCredentialsA, CredReadDomainCredentialsW, CredWriteDomainCredentialsA, CredWriteDomainCredentialsW, DuplicateToken, DuplicateTokenEx, EqualSid, FreeInheritedFromArray, FreeSid, GetAce, GetAclInformation, GetEffectiveRightsFromAclA, GetEffectiveRightsFromAclW, GetInheritanceSourceA, GetInheritanceSourceW, GetLengthSid, GetNamedSecurityInfoA, GetNamedSecurityInfoW, GetPrivateObjectSecurity, GetSecurityDescriptorDacl, GetSecurityDescriptorOwner, GetSidSubAuthority, GetTokenInformation, InitiateShutdownA, InitiateShutdownW, InitiateSystemShutdownExA, InitiateSystemShutdownExW, IsValidSid, LogonUserA, LogonUserExA, LogonUserExW, LogonUserW, LookupAccountNameA, LookupAccountNameW, LookupAccountSidA, LookupAccountSidW, LookupPrivilegeNameA, LookupPrivilegeNameW, LookupPrivilegeValueA, LookupPrivilegeValueW, LsaAddAccountRights, LsaConnectUntrusted, LsaCreateAccount, LsaDeregisterLogonProcess, LsaEnumerateAccountRights, LsaEnumerateAccountsWithUserRight, LsaGetAppliedCAPIDs, LsaGetSystemAccessAccount, LsaLookupAuthenticationPackage, LsaLookupNames2, LsaLookupSids2, LsaNtStatusToWinError, LsaOpenAccount, LsaOpenPolicy, LsaRegisterLogonProcess, LsaRemoveAccountRights, LsaSetSystemAccessAccount, MapGenericMask, OpenProcessToken, OpenThreadToken, PrivilegeCheck, QueryServiceConfig2A, QueryServiceConfig2W, QueryServiceConfigA, QueryServiceConfigW, RegCloseKey, RegNotifyChangeKeyValue, RegOpenKeyExA, RegOpenKeyExW, RevertToSelf, SetNamedSecurityInfoA, SetNamedSecurityInfoW, SetThreadToken
+
+Structures
+INHERITED_FROM, TRUSTEE, LSA_OBJECT_ATTRIBUTES, LSA_STRING, LSA_TRANSLATED_NAME, LSA_TRANSLATED_SID2, LSA_ENUMERATION_INFORMATION, LSA_REFERENCED_DOMAIN_LIST, LSA_TRUST_INFORMATION, LSA_UNICODE_STRING, CREDENTIAL, CREDENTIAL_TARGET_INFORMATION, ACCESS_ALLOWED_ACE, ACE_HEADER, ACL, ACL_REVISION_INFORMATION, ACL_SIZE_INFORMATION, CLAIM_SECURITY_ATTRIBUTE_INFORMATION_V1, CLAIM_SECURITY_ATTRIBUTES_INFORMATION, GENERIC_MAPPING, LUID, LUID_AND_ATTRIBUTES, QUOTA_LIMITS, SECURITY_DESCRIPTOR, SID_AND_ATTRIBUTES, SID_IDENTIFIER_AUTHORITY, TOKEN_ACCESS_INFORMATION, TOKEN_APPCONTAINER_INFORMATION, TOKEN_DEFAULT_DACL, TOKEN_ELEVATION, TOKEN_GROUPS, TOKEN_GROUPS_AND_PRIVILEGES, TOKEN_MANDATORY_POLICY, TOKEN_MANDATORY_LABEL, TOKEN_LINKED_TOKEN, TOKEN_ORIGIN, TOKEN_OWNER, TOKEN_PRIMARY_GROUP, TOKEN_SOURCE, TOKEN_STATISTICS, TOKEN_USER, PRIVILEGE_SET, PSID_IDENTIFIER_AUTHORITY, PTOKEN_PRIVILEGES, QUERY_SERVICE_CONFIG, SERVICE_DESCRIPTION, AUTHZ_ACCESS_REPLY, AUTHZ_ACCESS_REQUEST, AUTHZ_SECURITY_ATTRIBUTE_FQBN_VALUE, AUTHZ_SECURITY_ATTRIBUTE_OCTET_STRING_VALUE, AUTHZ_SECURITY_ATTRIBUTE_V1, AUTHZ_SECURITY_ATTRIBUTE_V1_Union
+
+</PackageReleaseNotes>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net20' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="System" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.Security.AccessControl" Version="4.4.0" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.4.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-
 </Project>
